Fix button icon on dark mode

--- a/app/css/_work.scss
+++ b/app/css/_work.scss
@@ -131,6 +131,7 @@
   }
 
   &__icon {
+    fill: var(--main-text-color);
     max-width: 16px;
     margin-left: 5px;
   }
